--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,38 +1,6 @@
-[colors]
-draw_bold_text_with_bright_colors = true
-
-[colors.bright]
-black = "#7c8f8f"
-blue = "#82aaff"
-cyan = "#7fdbca"
-green = "#21c7a8"
-magenta = "#ae81ff"
-red = "#ff5874"
-white = "#d6deeb"
-yellow = "#ecc48d"
-
-[colors.cursor]
-cursor = "#9ca1aa"
-text = "#080808"
-
-[colors.normal]
-black = "#1d3b53"
-blue = "#82aaff"
-cyan = "#7fdbca"
-green = "#a1cd5e"
-magenta = "#c792ea"
-red = "#fc514e"
-white = "#a1aab8"
-yellow = "#e3d18a"
-
-[colors.primary]
-background = "#011627"
-bright_foreground = "#eeeeee"
-foreground = "#bdc1c6"
-
-[colors.selection]
-background = "#b2ceee"
-text = "#080808"
+import = [
+  "~/.config/alacritty/catppuccin-mocha.toml"
+]
 
 [env]
 TERM = "xterm-256color"
@@ -43,7 +11,7 @@ padding.y = 10
 
 decorations = "Buttonless"
 
-opacity = 0.7
+opacity = 1
 blur = true
 
 option_as_alt = "Both"
