--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -1,10 +1,16 @@
-set -g default-terminal "screen-256color"
+sset-option -sa terminal-overrides ",xterm*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
 
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 unbind %
 bind | split-window -h 
@@ -13,7 +19,7 @@ unbind '"'
 bind - split-window -v
 
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/.tmux.conf
 
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
