--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-sset-option -sa terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-overrides ",xterm*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
 
@@ -19,7 +19,7 @@ unbind '"'
 bind - split-window -v
 
 unbind r
-bind r source-file ~/.config/tmux/.tmux.conf
+bind r source-file ~/.tmux.conf
 
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
