--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -5,11 +5,10 @@ $directory\
 $git_branch\
 $git_state\
 $git_status\
+$cmd_duration\
+$line_break\
 $python\
 $character"""
-
-right_format = """
-$cmd_duration"""
 
 add_newline = false
 
