--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,10 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 unbind %
-bind | split-window -h 
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 unbind r
 bind r source-file ~/.tmux.conf
