--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,13 +18,17 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
+
 unbind r
 bind r source-file ~/.tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+bind -r H resize-pane -L 5
 
 bind -r m resize-pane -Z
 
@@ -44,7 +48,6 @@ set -sg escape-time 10
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
