update android studio env variable

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,14 +48,7 @@ set -sg escape-time 10
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-
-set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
-
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
