--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ bind c new-window -c "#{pane_current_path}"
 unbind r
 bind r source-file ~/.tmux.conf
 
-bind -r J resize-pane -D 5
+bind -r J resize-pane -D 6
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 bind -r H resize-pane -L 5
@@ -49,6 +49,7 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
