add copilot to nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,9 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
 
-set -g prefix C-a
+set -g prefix C-t
 unbind C-b
-bind-key C-a send-prefix
+bind-key C-t send-prefix
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
