add notebook basic support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,8 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
+set -gq allow-passthrough on
+set -g visual-activity off
 
 set -g prefix C-t
 unbind C-b
